[project]
name = "agentbuilder"
version = "0.1.0"
description = "Practice building agents using Google ADK. Might expand to learn Agentic Workflows"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-adk>=1.26.0",
    "google-cloud-aiplatform>=1.139.0",
    "google-cloud-storage>=3.9.0",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "ruff>=0.15.4",
]
