[project]
name = "agentbuilder"
version = "0.1.0"
description = "Practice building agents using Google ADK. Might expand to learn Agentic Workflows"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-adk>=1.26.0",
    "google-cloud-aiplatform>=1.139.0",
    "google-cloud-storage>=3.9.0",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "ruff>=0.15.4",
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=5.0.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--cov=. --cov-report=term-missing --cov-fail-under=80"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
# E: pycodestyle (standard formatting)
# F: Pyflakes (syntax errors, unused imports)
# I: isort (automatically sorts your imports alphabetically)
# UP: pyupgrade (upgrades older python syntax to modern 3.13 standards)
select = ["E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
